# fake-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/: FUNDING.yml
.github/workflows/: deploy-docs.yml  release.yml  rust.yml
docs/: MAINTENANCE.md  README.md  index.html  quickstart.html  script.js  styles.css
docs/data/: examples.js  fakers.js  features.js  locales.js
dummy_derive/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
dummy_derive/src/: lib.rs
examples/: basic.rs  collections.rs  dummy.rs  fakers.rs  simple.rs  usage.rs
fake/: Cargo.toml  LICENSE-MIT  README.md
fake/examples/: basic.rs  collections.rs  derive.rs  fakers.rs  locale.rs  opt.rs  primitives.rs  usage.rs  utils.rs
fake/src/: lib.rs  utils.rs
fake/src/faker/: mod.rs
fake/src/faker/impls/: address.rs  administrative.rs  automotive.rs  barcode.rs  barecode.rs  boolean.rs  chrono.rs  color.rs  commerce.rs  company.rs  creditcard.rs  currency.rs  filesystem.rs  finance.rs  http.rs  image.rs  internet.rs  job.rs  lorem.rs  markdown.rs  mod.rs  name.rs  number.rs  phone_number.rs  picsum.rs  time.rs  uuid.rs
fake/src/impls/: mod.rs
fake/src/impls/base64/: mod.rs
fake/src/impls/bigdecimal/: mod.rs
fake/src/impls/bson_oid/: mod.rs
fake/src/impls/chrono/: mod.rs
fake/src/impls/chrono_tz/: mod.rs
fake/src/impls/color/: mod.rs
fake/src/impls/decimal/: mod.rs
fake/src/impls/either/: mod.rs
fake/src/impls/email_address/: mod.rs
fake/src/impls/ferroid/: mod.rs
fake/src/impls/geo/: mod.rs
fake/src/impls/glam/: mod.rs
fake/src/impls/http/: mod.rs
fake/src/impls/indexmap/: mod.rs
fake/src/impls/prost/: mod.rs
fake/src/impls/sea_orm/: mod.rs
fake/src/impls/semver/: mod.rs
fake/src/impls/serde_json/: mod.rs
fake/src/impls/std/: array.rs  container.rs  mod.rs  net.rs  num.rs  option.rs  path.rs  primitives.rs  result.rs  string.rs  time.rs  tuple.rs
fake/src/impls/std/collections/: binary_heap.rs  btree_map.rs  btree_set.rs  hash_map.rs  hash_set.rs  linked_list.rs  mod.rs  vec.rs  vec_deque.rs
fake/src/impls/time/: mod.rs
fake/src/impls/ulid/: mod.rs
fake/src/impls/url/: mod.rs
fake/src/impls/uuid/: mod.rs  seed.rs  v1.rs  v3.rs  v4.rs  v5.rs
fake/src/impls/zerocopy_byteorder/: mod.rs
fake/src/locales/: ar_sa.rs  cy_gb.rs  de_de.rs  en.rs  fa_ir.rs  fr_fr.rs  it_it.rs  ja_jp.rs  mod.rs  nl_nl.rs  pt_br.rs  pt_pt.rs  tr_tr.rs  zh_cn.rs  zh_tw.rs
fake/tests/: always-true.rs  de_manual_test.rs  derive_macros.rs  determinism.proptest-regressions  determinism.rs  determinism_new.rs
src/: boolean.rs  dummy.rs  fake.rs  helper.rs  lib.rs  lorem.rs  name.rs
src/dummy/: array.rs  mod.rs  primitives.rs  result.rs  string.rs  tuple.rs
src/dummy/collections/: binary_heap.rs  btree_map.rs  btree_set.rs  hash_map.rs  hash_set.rs  linked_list.rs  mod.rs  vec.rs  vec_deque.rs
src/dummy/containers/: mod.rs  option.rs
src/faker/: address.rs  boolean.rs  chrono.rs  company.rs  http.rs  internet.rs  job.rs  lorem.rs  mod.rs  name.rs  number.rs  phone_number.rs  time.rs
src/faker/impls/: address.rs  currency.rs  http.rs  internet.rs  lorem.rs  mod.rs  name.rs  phone_number.rs
src/impls/: mod.rs
src/impls/chrono/: mod.rs
src/impls/std/: array.rs  mod.rs  net.rs  primitives.rs  result.rs  string.rs  tuple.rs
src/impls/std/collections/: binary_heap.rs  btree_set.rs  hash_set.rs  linked_list.rs  mod.rs  vec_deque.rs
src/locales/: en.rs  mod.rs  zh_tw.rs
src/std_impls/: option.rs  string.rs
src/std_impls/collections/: hash_map.rs
