[package]
name = "dummy"
version = "0.6.0"
authors = ["cksac <cs.cksac@gmail.com>"]
description = "Macros implementation of #[derive(Dummy)]"
keywords = ["faker", "data", "random"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/cksac/fake-rs"
homepage = "https://github.com/cksac/fake-rs"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
proc-macro2 = { version = "1", default-features = false }
quote = "1.0"
darling = "0.20"
