[package]
name = "dummy"
version = "0.9.0"
authors = ["cksac <cs.cksac@gmail.com>"]
description = "Macros implementation of #[derive(Dummy)]"
keywords = ["faker", "data", "random"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/cksac/fake-rs"
homepage = "https://github.com/cksac/fake-rs"
edition = "2021"
rust-version = "1.63"

[lib]
proc-macro = true

[dependencies]
darling = { version = "0.20", default-features = false }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false }
